--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,11 @@
   Hello sandeep
 </div>
 
+<app-user-list></app-user-list>
+<app-inline-style></app-inline-style>
+<app-inlinetemplate></app-inlinetemplate>
+<app-inline-style-template></app-inline-style-template>
+<app-login></app-login>
 <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
