till noe use learn the Event i angular

--- a/src/app/user-auth/login/login.component.html
+++ b/src/app/user-auth/login/login.component.html
@@ -2,3 +2,7 @@
 <button (click)="getNames()">click Me</button>
 <button (click)="getName('name','seconame')">click Me2</button>
 
+<br />
+<br />
+<input type="text" #box (keyup)="funEvent(box.value)" placeholder="keyup event"  />
+<input type="text" #box1 (keydown)="funEvent(box1.value)"  placeholder="keydown event"/>
